<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_preferences"
        android:icon="@drawable/ic_build_black_24dp"
        android:orderInCategory="1"
        android:title="@string/preferences"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/menu_item_sort_popular"
        android:orderInCategory="1"
        android:title="@string/sort_by_most_popular">

    </item>

    <item
        android:id="@+id/menu_item_sort_rated"
        android:orderInCategory="2"
        android:title="@string/sort_by_most_rated">

    </item>

    <item
        android:id="@+id/menu_item_sort_popular_italian"
        android:orderInCategory="3"
        android:title="@string/sort_by_most_popular_italian">

    </item>
    <item
        android:id="@+id/menu_item_sort_rated_italian"
        android:orderInCategory="4"
        android:title="@string/sort_by_most_rated_italian">

    </item>
    <item
        android:id="@+id/menu_item_my_favourites"
        android:orderInCategory="6"
        android:title="@string/get_my_favourites_films">

    </item>
</menu>